5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4058/executions/1643_2445.log
== SUBMITION (2019-04-15 19:43:36) 
-- CODE:
escala=input("")
valor=float(input(""))
if escala.upper()=="F"
	mensagem=5/9*(valor-32)
else:
	mensagem=(9/5*valor)+32
print(round(mensagem,2))
-- EXECUTION TIME:
0.18351
-- ERROR:
  File "/home/codebench/codes/1643/2445/main.py", line 3
    if escala.upper()=="F"
                         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:43:46) 
-- CODE:
escala=input(" ")
valor=float(input(" "))
if escala.upper()=="F"
	mensagem=5/9*(valor-32)
else:
	mensagem=(9/5*valor)+32
print(round(mensagem,2))
-- EXECUTION TIME:
0.165346
-- ERROR:
  File "/home/codebench/codes/1643/2445/main.py", line 3
    if escala.upper()=="F"
                         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:44:07) 
-- CODE:
escala=input(" ")
valor=float(input(" "))
if escala.upper()=="F":
	mensagem=5/9*(valor-32)
	
else:
	mensagem=(9/5*valor)+32
print(round(mensagem, 2))
-- EXECUTION TIME:
0.208534
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
608.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
32.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
